Updated Resume, tried to fix the alignment issue with the icons again, let's see if it works

--- a/src/Third Page.css
+++ b/src/Third Page.css
@@ -66,7 +66,7 @@ The icons don't naturally align well, so some customization is needed.
 */
 #mobile_gmail {
     color: #353535;
-    font-size: 25vw;
+    font-size: 24.5vw;
     transform: translateY(-7%);
 }
 
